--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="images/img/motorcycle-svgrepo-com.svg" alt="">
+                <img src="images/img/Frame 1 (4).jpg" alt="">
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
@@ -103,6 +103,7 @@
                 <!-- Portfolio item 01 -->
                 <a href="portfolio-item.html" class="portfolio__item">
                     <img src="images/img/IMG_1051.JPG" alt="" class="portfolio__img">
+                    <span class="portfolio__item-label">Project Title</span>
                 </a>
                 
                 <!-- Portfolio item 02 -->
