--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                 <!-- Portfolio item 01 -->
                 <a href="portfolio-item.html" class="portfolio__item">
                     <img src="images/img/IMG_1051.JPG" alt="" class="portfolio__img">
-                    <span class="portfolio__item-label">Birthday Project</span>
+                    <div class="portfolio__item-label">Birthday Project</div>
                 </a>
                 
                 <!-- Portfolio item 02 -->
                 <a href="currency-blog.html" class="portfolio__item">
                     <img src="images/img/currencies-69522_1280.jpg"" alt="" class="portfolio__img">
-                    <span class="portfolio__item-label">Currency Blog</span>
+                    <div class="portfolio__item-label">Currency Blog</div>
                 </a>
                 
                 <!-- Portfolio item 03 -->
