--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </a>
                 
                 <!-- Portfolio item 06 -->
-                <a href="portfolio-item.html" class="portfolio__item">
+                <a href="https://github.com/BartleBytes/Bio-Diversity/blob/main/BioDiversityAnalysis.ipynb" class="portfolio__item">
                     <img src="images/img/portfolio-06.jpg" alt="" class="portfolio__img">
                     <p class="portfolio_item_label">Jupyter Notebook & Python data Analytics</p>
                 </a>
