--- a/portfolio-item2.html
+++ b/portfolio-item2.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="img/devjane.png" alt="">
+                <img src="images/img/Screenshot 2024-11-07 at 9.51.56 AM.png" alt="" >
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
